finishes input activity javascript

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="script/script.js"></script>
     <h1>My Heading</h1>
     <p>my paragraph</p>
+    <script defer src="script/script.js"></script>
 </body>
 </html>
